samples/_failures_safe/1760887282_711c69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02f5397b.c: In function ‘main’:
./samples/SAFE/__tmp_02f5397b.c:155:5: error: expected expression at end of input
  155 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_02f5397b.c:155:5: error: expected declaration or statement at end of input
